# crowleyframe

./: .gitattributes.txt  Cargo.toml  README.md  pyproject.toml  test_separate_unite.py
python/crowley_frame/: api.py  col.py  pipe.py
python/crowleyframe/: __init__.py  api.py  col.py  pipe.py
src/: frame.rs  selectors.rs
tests/: test_count_prop.py  test_groupby_summarise_pipe.py  test_mutate_lag_lead_rolling.py  test_pivot_longer_wider_basic.py  test_select_and_col.py  test_slice.py  test_tidyr.py
